fix contrast issue

--- a/accounts/static/accounts/style.css
+++ b/accounts/static/accounts/style.css
@@ -33,7 +33,7 @@ h3{
     position: absolute;
     top: 100%;
     display: none;
-    background-color: #f3f4f6;
+    background-color: #d0d3d7;
     width: 100%;
     padding: .5em;
     border-radius: .5em;
